src/RichTextArea/RichTextArea.scss
@import '../common';
@import '../Typography/Typography';

$minWidth: 380px;
$minHeight: 132px;
$borderColorNormal: $B30;
$borderColorError: $R10;
$border: 1px solid $B30;
$borderRadius: 6px;
$paddingTop: 6px;
$marginTop: $paddingTop;
$paddingLeft: 12px;
$marginLeft: $paddingLeft;

.container {
  display: flex;
  flex-direction: column;
  min-width: $minWidth;
  background: $D80;

  ul,
  ol {
    margin: $marginTop 0;
    padding: 0;
    list-style-type: none;

    li {
      position: relative;
      margin: 0 0 0 $marginLeft - 1px;
      padding-left: 10px;

      &:before {
        position: absolute;
        content: '\2022';
        left: -$marginLeft;
      }
    }
  }

  ol li {
    counter-increment: step-counter;

    &:before {
      content: counter(step-counter) ".";
    }
  }
}

.toolbar {
  border: $border;
  border-bottom: 0;
  border-top-left-radius: $borderRadius;
  border-top-right-radius: $borderRadius;

  .withError & {
    border-color: $borderColorError;
  }

  &.disabled {
    border-color: $D60;
  }
}

.editorWrapper {
  min-height: $minHeight;
  flex: 1 1 auto;
  display: flex;
  flex-direction: column;
  position: relative;
  border: $border;
  border-bottom-left-radius: $borderRadius;
  border-bottom-right-radius: $borderRadius;

  .withError & {
    border-color: $borderColorError;
    border-top-color: $borderColorNormal;
  }

  .isEditorFocused & {
    @include FocusBox;
  }
  
  .isEditorFocused.withError & {
    @include FocusBoxError;
  }

  &:not(.disabled):hover {
    background: $B50;
  }

  &.disabled {
    border-color: $D60;

    &:hover {
      border-color: $GR20;
    }
  }
}

.editor {
  @extend .t1;
  flex: 1 1 auto;
  padding: $paddingTop $paddingLeft;
  border-bottom-left-radius: $borderRadius;
  border-bottom-right-radius: $borderRadius;
}

.exclamation {
  $size: 20px;
  width: $size;
  height: $size;
  border-radius: 50%;
  display: none;
  align-items: center;
  justify-content: center;
  background-color: $R10;
  color: #fff;

  > svg {
    width: 10px;
    height: 10px;
  }

  .withError  & {
    display: flex;
    position: absolute;
    top: 6px;
    right: 6px;

    &:hover {
      background-color: $R10;
    }
  }
}

.placeholder {
  @extend .t2_1;
}

.link {
  @extend .t1_3;
}

.disabled {
  @extend .t2_1;

  .link {
    @extend .t1_4;
  }
}

.resizable {
  resize: vertical;
}

.scrollable {
  overflow: auto;
}

.editorImage {
	max-width: 100%;
  max-height: 20em;
}

.activeEditorImage {
  box-shadow: 0 0 0 2px blue;
}

